<resources>
    <string name="app_name">Fleet Tracker</string>

    // Control Names
    <string name="button_login">Sign in</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="menu_home_title">Home</string>
    <string name="menu_booking_title">Booking</string>
    <string name="menu_report_title">Report</string>
    <string name="menu_alert_title">Alert</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="label_fleet">Fleet</string>
    <string name="label_healthy">Healthy: </string>
    <string name="label_Faulty">Faulty: </string>
    <string name="label_online">Online: </string>
    <string name="label_offline">Offline: </string>
    <string name="label_search_letters">Search vehicle (Min 3 letters)</string>
    <string name="label_available_vehicles">Available Vehicle(s)</string>
    <string name="label_view_all">View all</string>
    <string name="label_name">Name</string>
    <string name="label_distance">Distance</string>
    <string name="label_last_seen">Last seen</string>
    <string name="dash">-</string>
    <string name="vehicle_data_not_available">Vehicle(s) not available.</string>
    <string name="label_trip">Trip: %1$s</string>
    <string name="ride_details">Ride Details (%1$s)</string>
    <string name="label_search_trip_speed">Speed limit</string>
    <string name="trip_data_not_available">Trip(s) not available.</string>
    <string name="label_Depart">Depart</string>
    <string name="label_arrive">Arrive</string>
    <string name="label_miles">Distance</string>
    <string name="label_fuels">Fuel %</string>
    <string name="label_trip_safety_analysis">Trip Safety Analysis</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="label_date_time"><![CDATA[Date & Time]]></string>
    <string name="label_speed">Speed</string>
    <string name="label_speed_limit">Speed limit</string>

    <string name="tab_events">Events</string>
    <string name="tab_fault">Faults</string>
    <string name="tab_geofence">Geofence</string>
    <string name="menu_filter_title">Filter</string>
    <string name="label_description">Description</string>
    <string name="label_date">Date</string>
    <string name="label_action">Action</string>

    <string name="menu_notification_title">Notifications</string>
    <string name="label_close">close</string>
    <string name="label_reports">Reports</string>
    <string name="lbl_utilization_report">Utilization Report</string>
    <string name="lbl_safety_report">Safety Report</string>
    <string name="lbl_health_report">Health Report</string>
    <string name="label_bookings">Bookings</string>
    <string name="lbl_my_bookings">My Bookings</string>
    <string name="lbl_booking_requests">Booking Requests</string>
    <string name="lbl_booking_summary">Booking Summary</string>
    <string name="lbl_vehicle_occupancy">Vehicle Occupancy</string>
    <string name="label_my_bookings">My Bookings</string>
    <string name="my_booking_search_hint">search my bookings</string>
    <string name="label_type">Type</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="label_pickup_location">Pickup Location</string>
    <string name="label_drop_location">Drop Location</string>
    <string name="label_vehicle_number">Vehicle No.</string>
    <string name="label_status">Status</string>
    <string name="label_map_view">Map View</string>
    <string name="bookings_data_not_available">No records found</string>
    <string name="label_service">Service</string>
    <string name="label_luggage">Luggage</string>
    <string name="label_passengers">Passengers</string>
    <string name="label_user_comments">User Comments</string>
    <string name="label_approver_comments">Approver Comments</string>
    <string name="label_title_trip">Trip</string>

    <string name="label_approved_rides">Approved Rides</string>
    <string name="label_pending_rides">Pending Rides</string>
    <string name="label_cancelled_rides">Cancelled Rides</string>
    <string name="label_rejected_rides">Rejected Rides</string>

    <string name="label_select_fleet">Select Fleet</string>

    <string name="label_select_vehicle">Select Vehicle</string>
    <string name="alerts_data_not_available">Alert(s) not available.\nPlease modify the filters and try again.</string>

    <string name="label_notification">Notifications</string>
    <string name="label_search_alerts">Search alert(s) (Min 3 letters)</string>
    <string name="label_driver">Driver</string>
    <string name="label_select_date">Date</string>

    <string name="tab_booking_summary">Booking Summary</string>
    <string name="tab_booking_history">Booking History</string>
    <string name="label_occupancy">Occupancy</string>
    <string name="label_apply">Apply</string>
    <string name="tab_today_summary">Today\'s Summary</string>
    <string name="tab_vehicle_occupancy">Vehicle Occupancy</string>
    <string name="title_booking_summary">Booking Summary</string>
    <string name="title_vehicle_occupancy">VehicleOccupancy</string>
    <string name="title_my_bookings">My Bookings</string>
    <string name="label_select_service">Select Service</string>
    <string name="label_select_booking_status">Select Booking Status</string>
</resources>
